pterodactyl/pterodactyl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl
  namespace: pterodactyl
  labels:
    app.kubernetes.io/name: pterodactyl
    app.kubernetes.io/component: server-manager
    app.kubernetes.io/part-of: pterodactyl
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pterodactyl
      app.kubernetes.io/component: server-manager
      app.kubernetes.io/part-of: pterodactyl
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pterodactyl
        app.kubernetes.io/component: server-manager
        app.kubernetes.io/part-of: pterodactyl
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: pterodactyl
          image: ghcr.io/blueprintframework/blueprint:v1.11.11
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: 2000m
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /app/var
              name: data
              subPath: var
            - mountPath: /etc/nginx/http.d
              name: data
              subPath: nginx
            - mountPath: /app/storage/logs
              name: data
              subPath: logs
            - mountPath: /var/log/nginx
              name: data
              subPath: nginx/logs
            - mountPath: /blueprint_extensions
              name: data
              subPath: extensions
      volumes:
        - name: data
          nfs:
            path: /export/Kubernetes/pterodactyl
            server: 192.168.86.107
