pterodactyl/pterodactyl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl
  namespace: pterodactyl
  labels:
    app.kubernetes.io/name: pterodactyl
    app.kubernetes.io/component: server-manager
    app.kubernetes.io/part-of: pterodactyl
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: pterodactyl
    app.kubernetes.io/component: server-manager
    app.kubernetes.io/part-of: pterodactyl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
