pterodactyl/pterodactyl-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pterodactyl
  namespace: pterodactyl
  labels:
    app.kubernetes.io/name: pterodactyl
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: pterodactyl
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`servers.flexflix.top`)
      kind: Rule
      services:
        - name: pterodactyl
          port: 80
